WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266475
[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-contain/contain-layout-005.html
https://bugs.webkit.org/show_bug.cgi?id=266475
Summary
[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-contain/contain-layou...
alan
Reported
2023-12-15 06:01:31 PST
ssia
Attachments
[fast-cq]Patch
(1.51 KB, patch)
2023-12-15 06:04 PST
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2023-12-15 06:04:30 PST
Created
attachment 469062
[details]
[fast-cq]Patch
EWS
Comment 2
2023-12-15 06:44:59 PST
Committed
272113@main
(9fdb1cb3afae): <
https://commits.webkit.org/272113@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469062
[details]
.
Radar WebKit Bug Importer
Comment 3
2023-12-15 06:45:15 PST
<
rdar://problem/119719086
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug