[IFC][Ruby] Fix imported/w3c/web-platform-tests/css/css-contain/contain-layout-005.html https://bugs.webkit.org/show_bug.cgi?id=266475

Reviewed by Antti Koivisto.

Layout containment does not apply to ruby-text (annotations).

* LayoutTests/fast/text/emphasis-avoid-ruby.html:
* Source/WebCore/rendering/RenderElementInlines.h:
(WebCore::RenderElement::shouldApplyLayoutOrPaintContainment const):

Canonical link: https://commits.webkit.org/272113@main